recursion.lessons.recursion.tree.Tree.scala.error
Tree:10: error: not found: value leveBrosse
	leveBrosse()
        ^Tree:12: error: not found: value baisseBrosse
	baisseBrosse()
        ^